# math-go-brr

./: .gitignore  Cargo.toml  Makefile  build.rs  build_info.md  cargo.toml  err.py  example.ipynb  example_optimization_level.py  pyproject.toml  readme.md  requirements.txt  test.py
.cargo/: config.toml
experiments/: syntax_err.py
math-go-brrr/: Cargo.toml  build.rs  main.py  readme.md
math-go-brrr-py/: Cargo.toml  pyproject.toml  readme.md  test.py
math-go-brrr-py/init/: pyvenv.cfg
math-go-brrr-py/math_go_brrr_py/: __init__.py
math-go-brrr-py/src/: lib.rs  util.rs
math-go-brrr/src/: ast_to_llvm.rs  lib.rs  llvm.rs  main.rs  python_ast.rs  python_ast_json.rs
math-go-brrr/src/parser/: mod.rs  python_ast.rs  python_ast_json.rs
math_go_brrr/: __init__.py  math_go_brrr.pyi  synthetic_traceback.py
src/: lib.rs  signature.rs  util.rs
src/compiler/: ast_to_llvm.rs  llvm.rs  mod.rs  util.rs
src/compiler/gen_llvm/: ast_to_llvm.rs  misc_converters.rs  mod.rs  runtime_err.rs  runtime_py_err.rs
src/compiler/parser/: mod.rs  python_ast.rs  python_ast_json.rs  translation.rs
tests/: test_1.py  test_diff_args.py  test_div.py  test_errors.py  test_loop.py  test_misc.py  test_reuse.py  test_road_to_loops.py  util.py
