[package]
name = "math_go_brrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "math_go_brrr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
anyhow = "1.0.86"
once_cell = "1.19.0"
aliasable = "0.1.3"
inkwell = { git = "https://github.com/TheDan64/inkwell.git", rev = "5c9f7fcbb0a667f7391b94beb65f1a670ad13221", features = [
  "llvm17-0",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
smallvec = "1.13.2"
