[package]
name = "math-go-brrr-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "math_go_brrr_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
math-go-brrr = { path = "../math-go-brrr" }
anyhow = "1.0.86"
once_cell = "1.19.0"
aliasable = "0.1.3"
