[package]
name = "math-go-brrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
